# espresso

./: .editorconfig  CMakeLists.txt  Makefile  TODO.md
asm/: assembler.py
include/: cell.hh  runtime.hh  system.hh
lib/: add3.espresso  add3.espressold  bench1.bc  bench1.easm  bench1.espresso  doublemath.bc  doublemath.easm  empty.espresso  entry.bc  entry.easm  fact.easm  factorial.bc  factorial.easm  factorial.espresso  fib.bc  fib.easm  fibonacci.espresso  gcbench.bc  gcbench.easm  helloworld.bc  helloworld.easm  helloworld.espresso  invalid.bc  invalid.easm  recursiveprint.bc  recursiveprint.easm  sing.espresso  try.bc  try.easm  wip.espresso
src/: cell.cc  ebc.cc  ebc.hh  ecomp.cc  ecomp.hh  edep.hh  enat.cc  enat.hh  ert.cc  ert.hh  espresso.cc  espresso.hh  esys.hh  main.cc  runtime.cc  system.cc
test/: main.cc
test/output/: recursiveprint.txt  sing.txt  try.txt
theme/vscode/: language-configuration.json  package.json
theme/vscode/syntaxes/: theme.json
